[gd_scene load_steps=10 format=4 uid="uid://dee58uexn1k8x"]

[ext_resource type="Texture2D" uid="uid://qshsfsf0ukwy" path="res://pingpong/assets/Green.png" id="1_dkmmp"]
[ext_resource type="Script" uid="uid://cvn37ors7n3f2" path="res://pingpong/scripts/pingpong.gd" id="1_l4lrg"]
[ext_resource type="Texture2D" uid="uid://b006lybcda3n3" path="res://pingpong/assets/Terrain (16x16).png" id="2_o4xrk"]
[ext_resource type="PackedScene" uid="uid://jo6dvyolq8nr" path="res://pingpong/player_1.tscn" id="3_o4xrk"]
[ext_resource type="PackedScene" uid="uid://bsr7j2gklfem7" path="res://pingpong/player_2.tscn" id="4_ovu74"]
[ext_resource type="PackedScene" uid="uid://bpnxkhcsxq1et" path="res://pingpong/ball.tscn" id="5_l4lrg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ksb8u"]
texture = ExtResource("2_o4xrk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:4/0 = 0
18:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:4/0 = 0
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:4/0 = 0
21:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
17:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:5/0 = 0
18:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:5/0 = 0
19:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:5/0 = 0
20:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:5/0 = 0
21:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_ovu74"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ksb8u")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2p08"]
size = Vector2(28, 642)

[node name="pingpong" type="Node2D"]
script = ExtResource("1_l4lrg")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1188.0
offset_bottom = 641.0
texture = ExtResource("1_dkmmp")
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAASAAQAAAABAAAAAAASAAQAAAACAAAAAAASAAQAAAADAAAAAAASAAQAAAAEAAAAAAASAAQAAAAFAAAAAAASAAQAAAAGAAAAAAASAAQAAAAHAAAAAAASAAQAAAAIAAAAAAASAAQAAAAJAAAAAAASAAQAAAAKAAAAAAASAAQAAAALAAAAAAASAAQAAAAMAAAAAAASAAQAAAANAAAAAAASAAQAAAAOAAAAAAASAAQAAAAPAAAAAAASAAQAAAAQAAAAAAASAAQAAAARAAAAAAASAAQAAAASAAAAAAASAAQAAAATAAAAAAASAAQAAAAUAAAAAAASAAQAAAAVAAAAAAASAAQAAAAWAAAAAAASAAQAAAAXAAAAAAASAAQAAAAYAAAAAAASAAQAAAAZAAAAAAASAAQAAAAaAAAAAAASAAQAAAAbAAAAAAASAAQAAAAcAAAAAAASAAQAAAAdAAAAAAASAAQAAAAeAAAAAAASAAQAAAAfAAAAAAASAAQAAAAgAAAAAAASAAQAAAAhAAAAAAASAAQAAAAiAAAAAAASAAQAAAAjAAAAAAASAAQAAAAAABMAAAASAAQAAAABABMAAAASAAQAAAACABMAAAASAAQAAAADABMAAAASAAQAAAAEABMAAAASAAQAAAAFABMAAAASAAQAAAAGABMAAAASAAQAAAAHABMAAAASAAQAAAAIABMAAAASAAQAAAAJABMAAAASAAQAAAAKABMAAAASAAQAAAALABMAAAASAAQAAAAMABMAAAASAAQAAAANABMAAAASAAQAAAAOABMAAAASAAQAAAAPABMAAAASAAQAAAAQABMAAAASAAQAAAARABMAAAASAAQAAAASABMAAAASAAQAAAATABMAAAASAAQAAAAUABMAAAASAAQAAAAVABMAAAASAAQAAAAWABMAAAASAAQAAAAXABMAAAASAAQAAAAYABMAAAASAAQAAAAZABMAAAASAAQAAAAaABMAAAASAAQAAAAbABMAAAASAAQAAAAcABMAAAASAAQAAAAdABMAAAASAAQAAAAeABMAAAASAAQAAAAfABMAAAASAAQAAAAgABMAAAASAAQAAAAhABMAAAASAAQAAAAiABMAAAASAAQAAAAjABMAAAASAAQAAAASAAoAAAAPAAkAAAASAAkAAAAPAAkAAAASAAgAAAAPAAkAAAASAAcAAAAPAAkAAAASAAYAAAAPAAkAAAASAAUAAAAPAAkAAAASAAQAAAAPAAkAAAASAAMAAAAPAAkAAAASAAIAAAAPAAkAAAASAAEAAAAPAAkAAAASAAsAAAAPAAkAAAASAAwAAAAPAAkAAAASAA0AAAAPAAkAAAASAA4AAAAPAAkAAAASAA8AAAAPAAkAAAASABAAAAAPAAkAAAASABEAAAAPAAkAAAASABIAAAAPAAkAAAAkAAAAAAASAAQAAAAkABMAAAASAAQAAAA=")
tile_set = SubResource("TileSet_ovu74")

[node name="player1" parent="." instance=ExtResource("3_o4xrk")]
position = Vector2(50, 320)

[node name="player2" parent="." instance=ExtResource("4_ovu74")]
position = Vector2(1129, 310)

[node name="Ball" parent="." instance=ExtResource("5_l4lrg")]
unique_name_in_owner = true
position = Vector2(593, 320)

[node name="scoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-17, 322)
shape = SubResource("RectangleShape2D_x2p08")

[node name="scoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(1200, 320)
shape = SubResource("RectangleShape2D_x2p08")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="player1" type="Label" parent="Hud"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 31.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="player2" type="Label" parent="Hud"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 50.0
offset_top = 31.0
offset_right = 148.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="scoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="scoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
